--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 .App {
   text-align: center;
 }
+body {
+  background-color: #BED5EB;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+}
 
 .App-logo {
   height: 40vmin;
