--- a/src/pages/Marketplace/style.css
+++ b/src/pages/Marketplace/style.css
@@ -27,6 +27,7 @@
 
 /* Boutons personnalisés */
 .custom-button {
+  margin-top: 10px;
   font-size: 10px;
   border-radius: 15px;
   padding: 5px 10px;
