--- a/src/components/IPDetails/style.css
+++ b/src/components/IPDetails/style.css
@@ -19,17 +19,19 @@
 /* Bloc image */
 .ip-details-image {
   flex: 1;
-  min-width: 300px;
-  max-width: 450px;
+  min-width: 650px;
+  max-width: 800px;
   display: flex;
   justify-content: center;
+  
 
 align-items: center;
+margin-left: 50px
 }
 
 .ip-details-image img {
   width: 100%;
-  max-height: 400px;
+  max-height: 800px;
   object-fit: contain;
   border-radius: 10px;
 
@@ -40,14 +42,14 @@ box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
 .ip-details-info {
   flex: 2;
 min-width: 300px;
-margin-left: 50px;
+  margin-left: 80px;
 
 }
 
 .ip-details-info h3 {
-  margin-bottom: 20px;
-  font-size: 24px;
 
+  font-size: 50px;
+margin-top: 0 !important;
 color: #02032a;
 }
 
