--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,21 @@ body {
  margin: 0;
  padding: 0;
 }
+.title-search-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap; /* important pour responsive */
+  padding: 20px;
+  gap: 20px;
+}
+
+.title-search-header {
+  flex: 1; /* prend l'espace disponible */
+  min-width: 250px; /* pour éviter d'écraser */
+}
+
+.title-search-bar {
+  flex: 1;
+  min-width: 300px;
+}
