--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,15 @@ body {
   flex: 1;
   min-width: 300px;
 }
+body, p {
+  font-family: "Source Serif Pro", serif;
+  font-weight: 400;
+  font-size: 20px;
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Söhne", sans-serif;
+  font-weight: 600;
+}
