--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,19 +1,76 @@
+.navbar {
+  background-color: #f9f9f9;
+  margin: 1% 6%;
+  border-radius: 20em;
+  padding: 0 2%;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+
+}
 
 .navbar-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
 
+.navbar-logo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  text-decoration: none;
+  color: inherit;
+}
+
+.navbar-logo img {
+  height: 60px;
+}
+
+.nav-links {
+  font-family: "Source Serif Pro", serif;
+  font-weight: 400;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
 }
 
 .nav-links a {
   color: black;
   text-decoration: none;
-  margin: 0 15px;
-  font-weight: bold;
-  font-size: 16px;
+  margin: 0 40px;
+  font-size: 21px;
+  padding: 10px 25px;
+  border-radius: 20em;
+  transition: 
+    color   0.5s  ease-in-out, 
+    background-color   0.5s  ease-in-out, 
+    font-weight   0.5s  ease-in-out,
+    transform   0.5s  ease-in-out;
+}
+
+/* Hover effect */
+
+.nav-links a {
+  transition: 
+    color 0.5s ease-in-out, 
+    background-color 0.5s ease-in-out, 
+    font-weight 0.5s ease-in-out,
+    transform 0.5s ease-in-out,
+    box-shadow 0.5s ease-in-out;
 }
 
 .nav-links a:hover {
-  text-decoration: underline;
+  transform: translateY(-5px);
+  font-weight: bold;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+/* Active link style with smooth transition */
+.active-link {
+  font-weight: bold;
+  background-color: #fec447;
+  transform: scale(1.05);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+h1{
+  font-size: 28px;
 }
