--- a/src/components/CardContainer/style.css
+++ b/src/components/CardContainer/style.css
@@ -1,6 +1,6 @@
 .card-container {
-  background-color: gainsboro;
-  padding: 20px;
+  background-color: #fef5e4;
+  padding: 20px 20px 20px 20px;
   border-radius: 1em;
   width: 95%;
   height: 80vh; /* 🔥 Responsive height: 80% of screen height */
@@ -11,6 +11,8 @@
   overflow-x: hidden;
   overflow-anchor: none;
   margin: 50px auto;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.5s ease, box-shadow 0.5s ease;
 }
 
 
