style : added Playfair Display font family

--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,6 @@ body, p {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Söhne", sans-serif;
+  font-family:'Playfair Display', serif;
   font-weight: 600;
 }
