--- a/src/pages/Marketplace/style.css
+++ b/src/pages/Marketplace/style.css
@@ -37,7 +37,17 @@
   object-fit: cover;
   border-radius: 8px;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
 }
+.pdf-preview {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 7vh; /* 📄 plus grand */
+  background-color: #f5f5f5; /* gris clair */
+  color: #d32f2f; /* rouge doux */
+}
+
 
 .file-audio {
   width: 120px;
