--- a/src/pages/Marketplace/style.css
+++ b/src/pages/Marketplace/style.css
@@ -257,7 +257,6 @@
   transition: all 0.3s ease !important;
   font-family: "Source Serif Pro", serif !important;
   min-width: 20vh !important;
-  max-width: 30vh !important;
   height: 40px !important;
   display: flex !important;
   align-items: center !important;
@@ -274,4 +273,8 @@
   padding: 2px 8px;
   border-radius: 12px;
   margin-left: 10px;
+}
+.search-bar {
+ align-items: center;
+ justify-content: space-between;
 }
