fix : css marketplace

--- a/src/pages/Marketplace/style.css
+++ b/src/pages/Marketplace/style.css
@@ -1,6 +1,6 @@
 /* ===== Marketplace Layout ===== */
 
-.ip-card-list {
+.ip-card-list-marketplace{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
@@ -11,7 +11,7 @@
 
 /* ===== IP Card ===== */
 
-.ip-card {
+.ip-card-marketplace{
   
   align-items: center;
   justify-content: space-between;
@@ -23,14 +23,14 @@
   cursor: pointer; /* Make the card clickable */
 }
 
-.ip-card:hover {
+.ip-card-marketplace:hover {
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
   transform: translateY(-2px);
 }
 
 /* ===== File (Image / Video / Audio Preview) ===== */
 
-.ip-card-file {
+.ip-card-file-marketplace {
   width: 100%;
   height: 200px; /* Same as image height */
   display: flex;
@@ -244,7 +244,7 @@
 }
 
 
-.upload-button {
+.upload-button-marketplace {
   font-weight: bold !important;
   background-color: #fec447 !important;
   transform: scale(1.05) !important;
