style : added dashboard background to the login + signup

--- a/src/components/AuthComponents/style.css
+++ b/src/components/AuthComponents/style.css
@@ -12,3 +12,11 @@
   }
 
 
+  .auth-background {
+    background: 
+      linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+      url('../../assets/images/dashboard-bck.jpg');
+    background-size: cover;
+    background-position: center;
+  }
+  
